--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,59 @@
 title: "Anuj Pandey"
+tagline: "Data Scientist & AI Engineer"
 description: >
   Data Scientist and AI Engineer working at the intersection of
   machine learning, bioprocessing, and pharmaceutical manufacturing.
+  Specializing in applying statistical modeling, DOE, and AI to real-world
+  pharmaceutical challenges.
 
 url: "https://anujpandey10.github.io"
-baseurl: ""   # <-- THIS IS THE KEY LINE
+baseurl: ""
 
+# Author Information
+author:
+  name: "Anuj Pandey"
+  email: "anujpandey@email.com"
+  linkedin: "anuj-pandey9"
+  github: "anuj-pandey"
+  location: "Maharashtra, India"
+  bio: "Data Scientist at Wockhardt Ltd. | IIT Kharagpur MTech | Computational Biology, AI & ML for Pharmaceutical R&D"
+
+# Theme and Appearance
 theme: minima
+minima:
+  skin: dark
 
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-sitemap
 
+# Navigation
 header_pages:
   - index.md
   - about.md
+  - experience.md
+  - skills.md
   - projects.md
+  - blog.md
   - contact.md
+
+# Blog Settings
+permalink: /blog/:year/:month/:day/:title/
+paginate: 10
+paginate_path: "/blog/page:num/"
+
+# SEO
+twitter:
+  username: anuj_pandey
+  card: summary
+
+social:
+  name: Anuj Pandey
+  links:
+    - https://www.linkedin.com/in/anuj-pandey9/
+    - https://github.com/anuj-pandey
+
+# Google Analytics (add your tracking ID if you have one)
+# google_analytics: UA-XXXXXXXXX-X
 
