made modular structure with dark theme

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,8 @@ author_details:
 # Theme and Appearance
 theme: minima
 minima:
-  skin: dark
+  # Keep Minima neutral; dark/light is handled via our CSS vars + `data-theme`.
+  skin: classic
 
 plugins:
   - jekyll-feed
