--- a/_config.yml
+++ b/_config.yml
@@ -59,5 +59,6 @@ social:
     - https://github.com/anuj-pandey
 
 # Google Analytics (add your tracking ID if you have one)
-# google_analytics: UA-XXXXXXXXX-X
+ #google_analytics: UA-XXXXXXXXX-X
+ google_analytics: G-41DBVNDETZ
 
